# xsdk-embedded-kit

./: .clang-format  .clang-tidy  .codespellrc  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  misra.json  size_budget.txt  template.c  template.h  xsdk.bat
src/: CMakeLists.txt
src/applications/: CMakeLists.txt
src/applications/am243x_bringup/: CMakeLists.txt  main.c
src/applications/ch32h417_bringup/: CMakeLists.txt  blinky.c  blinky.h  main.c  rtos_tasks.c  rtos_tasks.h  test_peripherals.c  test_peripherals.h  uart_console.c  uart_console.h  usb_dev.c  usb_dev.h
src/applications/xbridge/: CMakeLists.txt
src/applications/xbridge/include/: xbridge_adc.h  xbridge_can.h  xbridge_config.h  xbridge_core.h  xbridge_dap.h  xbridge_defs.h  xbridge_gpio.h  xbridge_i2c.h  xbridge_log.h  xbridge_pwm.h  xbridge_qspi.h  xbridge_return.h  xbridge_spi.h  xbridge_uart.h
src/applications/xbridge/src/: xbridge_adc.c  xbridge_can.c  xbridge_core.c  xbridge_dap.c  xbridge_gpio.c  xbridge_i2c.c  xbridge_pwm.c  xbridge_qspi.c  xbridge_spi.c  xbridge_uart.c
src/applications/xbridge/tests/: CMakeLists.txt  test_helpers.h  test_xbridge_adc.c  test_xbridge_can_slcan.c  test_xbridge_dap.c  test_xbridge_gpio.c  test_xbridge_i2c.c  test_xbridge_pwm.c  test_xbridge_spi.c  test_xbridge_uart.c
src/applications/xlogic/: CMakeLists.txt
src/applications/xlogic/include/: xlogic_config.h  xlogic_core.h  xlogic_defs.h  xlogic_log.h  xlogic_pru.h  xlogic_return.h  xlogic_sump.h  xlogic_transport.h
src/applications/xlogic/src/: xlogic_core.c  xlogic_pru.c  xlogic_sump.c  xlogic_transport.c
src/applications/xusbip/include/: xusbip_config.h  xusbip_defs.h  xusbip_log.h  xusbip_proto.h  xusbip_return.h  xusbip_urb.h
src/applications/xusbip/src/: xusbip_proto.c  xusbip_urb.c
src/components/xboot/: CMakeLists.txt  README.md
src/components/xboot/include/: xboot_config.h  xboot_core.h  xboot_defs.h  xboot_handoff.h  xboot_image.h  xboot_partition.h  xboot_return.h  xboot_storage.h  xboot_verify.h
src/components/xboot/src/: xboot_core.c  xboot_handoff.c  xboot_image.c  xboot_partition.c  xboot_storage.c  xboot_verify.c
src/components/xboot/tests/: CMakeLists.txt
src/components/xfs/: CMakeLists.txt  README.md
src/components/xfs/include/: xfs_block_device.h  xfs_cache.h  xfs_config.h  xfs_core.h  xfs_defs.h  xfs_directory.h  xfs_fat32.h  xfs_fat32_bpb.h  xfs_fat32_cluster.h  xfs_fat32_directory.h  xfs_file.h  xfs_format.h  xfs_log.h  xfs_path.h  xfs_return.h  xfs_trace.h
src/components/xfs/src/: xfs_cache.c  xfs_core.c  xfs_directory.c  xfs_fat32.c  xfs_fat32_bpb.c  xfs_fat32_cluster.c  xfs_fat32_directory.c  xfs_file.c  xfs_format.c  xfs_path.c
src/components/xnet/: CMakeLists.txt  README.md
src/components/xnet/include/: xnet_arp.h  xnet_config.h  xnet_core.h  xnet_defs.h  xnet_dhcp.h  xnet_dns.h  xnet_ethernet.h  xnet_icmp.h  xnet_interface.h  xnet_ipv4.h  xnet_log.h  xnet_packet.h  xnet_return.h  xnet_timer.h  xnet_udp.h
src/components/xnet/src/: xnet_arp.c  xnet_core.c  xnet_dhcp.c  xnet_dns.c  xnet_ethernet.c  xnet_icmp.c  xnet_interface.c  xnet_ipv4.c  xnet_packet.c  xnet_timer.c  xnet_udp.c
src/components/xrtos/: CMakeLists.txt  README.md
src/components/xrtos/include/: xrtos_config.h  xrtos_core.h  xrtos_defs.h  xrtos_event.h  xrtos_log.h  xrtos_mutex.h  xrtos_notify.h  xrtos_port.h  xrtos_queue.h  xrtos_return.h  xrtos_scheduler.h  xrtos_sem.h  xrtos_task.h  xrtos_tick.h  xrtos_timer.h  xrtos_trace.h
src/components/xrtos/src/: xrtos_blocking.h  xrtos_core.c  xrtos_event.c  xrtos_mutex.c  xrtos_notify.c  xrtos_private.h  xrtos_queue.c  xrtos_scheduler.c  xrtos_sem.c  xrtos_tick.c  xrtos_timer.c
src/components/xrtos/tests/: CMakeLists.txt
src/components/xshell/: CMakeLists.txt  README.md
src/components/xshell/include/: xcli.h  xcmd.h  xshell.h  xshell_config.h  xshell_log.h  xshell_return.h
src/components/xshell/src/: xcli.c  xcmd.c  xshell.c
src/components/xusb/: CMakeLists.txt  README.md
src/components/xusb/include/: xusb_cdc_defs.h  xusb_defs.h  xusb_descriptor.h  xusb_dfu_defs.h  xusb_hid_defs.h  xusb_msc_defs.h  xusb_setup.h  xusb_uac_defs.h  xusb_uvc_defs.h  xusb_win_defs.h
src/components/xusb/tests/: CMakeLists.txt
src/components/xusbd/: CMakeLists.txt  LICENSE  README.md
src/components/xusbd/examples/: CMakeLists.txt
src/components/xusbd/include/: xusbd_cdc.h  xusbd_class.h  xusbd_config.h  xusbd_core.h  xusbd_dcd.h  xusbd_dfu.h  xusbd_hid.h  xusbd_log.h  xusbd_msc.h  xusbd_return.h  xusbd_std.h  xusbd_trace.h  xusbd_win.h
src/components/xusbd/tests/: CMakeLists.txt
src/components/xusbh/: CMakeLists.txt  README.md
src/components/xusbh/include/: xusbh_class.h  xusbh_config.h  xusbh_core.h  xusbh_descriptor.h  xusbh_hcd.h  xusbh_hid.h  xusbh_msc.h  xusbh_return.h  xusbh_trace.h
src/components/xusbh/tests/: CMakeLists.txt
src/components/xutil/: CMakeLists.txt  README.md  xassert.h  xbytes.h  xlog.h  xreturn.h
src/components/xutil/xfault/: CMakeLists.txt  misra_waivers.md
src/components/xutil/xtrace/: CMakeLists.txt  misra_waivers.md
src/drivers/xgpio/: CMakeLists.txt
src/drivers/xgpio/include/: xgpio.h  xgpio_config.h  xgpio_defs.h  xgpio_driver.h  xgpio_return.h  xgpio_trace.h
src/drivers/xgpio/src/: xgpio.c
src/drivers/xgpio/tests/: CMakeLists.txt
src/drivers/xi2c/: CMakeLists.txt
src/drivers/xi2c/include/: xi2c.h  xi2c_config.h  xi2c_defs.h  xi2c_driver.h  xi2c_log.h  xi2c_return.h  xi2c_trace.h
src/drivers/xspi/: CMakeLists.txt  README.md  misra_waivers.md
src/drivers/xtimer/: CMakeLists.txt  README.md
src/drivers/xuart/: CMakeLists.txt  README.md
src/port/am243x/: CMakeLists.txt  startup_am243x.S  xsdk_port_am243x.c  xsdk_sbl_board_init.c  xsdk_soc_cache.h  xsdk_soc_mmr.h  xsdk_soc_mpu.h
src/port/ch32h417/: CMakeLists.txt  ch32h417_conf.h  startup_v5f.S  system_ch32h417.h  xgpio_drv.c  xgpio_drv.h  xpfic_drv.c  xpfic_drv.h  xrcc_drv.c  xrcc_drv.h  xsdk_port_ch32h417.c  xsdk_port_ch32h417.h  xsdk_soc_runtime.c  xsystick_drv.c  xsystick_drv.h
src/port/qemu_r5/: qemu.cmake  uart.h
(+400 files in other folders)
