if(xSDK_BUILD_TESTS)
    add_library(unity STATIC third_party/unity/src/unity.c)
    target_include_directories(unity SYSTEM PUBLIC third_party/unity/src)
    target_compile_options(unity PRIVATE -w)

    add_library(fff INTERFACE)
    target_include_directories(fff SYSTEM INTERFACE third_party/fff)
endif()

if(CMAKE_SYSTEM_PROCESSOR STREQUAL "arm" OR xSDK_SOC_CH32H417)
    enable_language(ASM)
endif()

add_subdirectory(components/xutil)
add_subdirectory(components/xrtos)

if(xSDK_SOC_CH32H417)
    set(XUSBD_PORT "ch32h417" CACHE STRING "USB Device Port" FORCE)
    add_subdirectory(components/xusb)
    if(xSDK_BUILD_XUSB_DEVICE)
        add_subdirectory(components/xusbd)
    endif()
    add_subdirectory(port/ch32h417)
    add_subdirectory(drivers/xi2c)
    add_subdirectory(drivers/xspi)
    add_subdirectory(drivers/xuart)
    add_subdirectory(drivers/xtimer)
    add_subdirectory(drivers/xgpio)
    if(xSDK_BUILD_APPLICATIONS)
        add_subdirectory(applications)
    endif()
    return()
endif()

add_subdirectory(components/xboot)
add_subdirectory(components/xusb)
if(xSDK_BUILD_XUSB_DEVICE)
    add_subdirectory(components/xusbd)
endif()
if(xSDK_BUILD_XUSB_HOST)
    add_subdirectory(components/xusbh)
endif()
add_subdirectory(components/xfs)
add_subdirectory(components/xnet)
add_subdirectory(components/xshell)
add_subdirectory(drivers/xi2c)
add_subdirectory(drivers/xspi)
add_subdirectory(drivers/xuart)
add_subdirectory(drivers/xtimer)
add_subdirectory(drivers/xgpio)

if(xSDK_SOC_AM243X)
    add_subdirectory(port/am243x)
endif()

if(xSDK_BUILD_APPLICATIONS)
    add_subdirectory(applications)
endif()
